typescript/checker/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            152,
        ),
        hi: BytePos(
            153,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates.ts:13:5
   |
13 | var i: I2;
   |     ^

